<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="button_text">Calculate</string>
    <string name="hint_weight">your weight (in kg)</string>
    <string name="hint_height">Your height (in m)</string>
    <string name="title">"Welcome to our famous BMI calculator, recommended by every RESPECTABLE doctor!! "</string>
    <string name="placeholder_result">Your BMI is...</string>
    <string name="underweight">You are underweight</string>
    <string name="normal_weight">You are at normal weight</string>
    <string name="overweight">You are overweight</string>
    <string name="Obesity">You are obese</string>
    <string name="placeholder_body_type">Your body type is...</string>
    <string name="bmi_flavour_text">"Your BMI is: "</string>
    <string name="floating_message">Calculating...</string>
    <string name="both_fields_empty">The fields cannot be empty</string>
    <string name="height_field_empty">The height field cannot be empty</string>
    <string name="weight_field_empty">The weight field cannot be empty</string>
</resources>