<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout"
    tools:context=".MainActivity">


        <Button
            android:id="@+id/calculate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.675"></Button>

        <EditText
            android:id="@+id/edit_text_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:hint="@string/hint_weight"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/calculate_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"></EditText>

        <EditText
            android:id="@+id/edit_text_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_height"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@+id/edit_text_weight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"></EditText>

        <ImageView
            android:id="@+id/bmi_image"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginBottom="24dp"
            android:background="@color/white"
            android:src="@drawable/bmi"
            app:layout_constraintBottom_toTopOf="@+id/edit_text_height"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"></ImageView>

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/mini_margin"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@drawable/bmi"></TextView>


        <TextView
            android:id="@+id/result_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/placeholder_result"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculate_button"></TextView>

        <TextView
            android:id="@+id/body_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/placeholder_body_type"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_text"></TextView>


</androidx.constraintlayout.widget.ConstraintLayout>